- Cleanups
- Fixes in dialog layouts


Reggie, 22.6.1999:
------------------
- Activating/Deactivating embedded parts works now
  (no crashes anymore :-)

Reggie, 23.6.1999:
------------------
- Don't flicker when resizing the page
- Optimized drawing background - produces much smaller PS output now

Reggie, 29.6.1999:
------------------
- Removed focus hacks

Reggie, 31.7.1999:
--------------
- Using better gradients and effects from KPixmapEffects
- Using the new and cool gradients in the demo
- KPresenter supports now unbalanced gradients too (thanx to KPixmapEffects!!!!)

Reggie, 2.8.1999:
-------------
- Swapped horizontal - vertical gradients back
- Using sliders in property dialog for configuration of unbalanced gradients too
- Switching unbalanced gradients on/off using a checkbox (not a radiobutton)
- Some gradient update fixes
- Some fixes
- Fixed gradients in headers/footers

Reggie, 14.8.1999:
------------------
- Fixed a segfault in the textobject
- Fixed random adding of spaces in the textobject
- Some other small textobject fixes
- Fixes with headers and footers
- Implemented gap for text objects
- Improved extending contents of a textobj to the object height
- Dont't forget current URL (filename) when inserting a new page

Reggie, 15.8.1999:
------------------
- When inserting a new page (template), don't change the page layout
- Fixes in textobject
- Fixes in headers/footers

Reggie, 16.8.1999:
------------------
- Started working on the new presentation structure viewer/editor

Reggie, 17.8.1999:
------------------
- Fixed cut/copy/paste for textobjs
- Fixed deleting regions in the textobject
- Fixed saving/loading gradients (esp. unbalanced)

Reggie, 20.8.1999:
------------------
- Improved speed of inserting new pages/slides
- Improved speed of pixmap handling

Reggie, 21.8.1999:
------------------
- Make backups before saving
- Fixed a bug in the pixmap handling
- reverted and fixed some stuff, which I broke yesterday
- Fixed some memleaks